# alchemist-demake

./: .gitignore  CMakeLists.txt  README.md  alchemist-demake.bak  alchemist-demake.gbsproj  alchemist-demake.gbsproj.bak
assets/backgrounds/: map.aseprite
assets/engine/include/states/: platform.h
assets/engine/src/states/: platform.c
assets/music/: title.bak  title.uge.bak
plugins/Busta/events/: eventBustaSetField.js
plugins/PlatformerPlus/events/: eventPPFieldSet.js
plugins/PlatformerPlusGravity/events/: eventPPDisableGravity.js  eventPPEnableGravity.js
project/: engine_field_values.gbsres  settings.gbsres  user_settings.gbsres  variables.gbsres
project/avatars/: dreamer.gbsres  flask.gbsres  flower.gbsres  key.gbsres  knife.gbsres  mushroom.gbsres  plant.gbsres  player.gbsres
project/backgrounds/: busta-games.gbsres  cave.gbsres  cliffside.gbsres  dream.gbsres  dream2.gbsres  game_over.gbsres  house_exterior.gbsres  house_interior.gbsres  pause_menu.gbsres  placeholder.gbsres  river.gbsres  title.gbsres
project/music/: gameplay.gbsres  title.gbsres
project/palettes/: darker.gbsres  material_1.gbsres  material_2.gbsres  palette_15.gbsres  player.gbsres  power_1.gbsres  power_2.gbsres  power_3.gbsres
project/scenes/cave/: scene.gbsres
project/scenes/cave/actors/: flask_chest_3.gbsres  shroom_2.gbsres  shroom_3.gbsres  shroom_4.gbsres  shroom_5.gbsres  shroom_6.gbsres
project/scenes/cave/triggers/: exit.gbsres  water.gbsres  water_2.gbsres  water_3.gbsres
project/scenes/cliff_side/: scene.gbsres
project/scenes/cliff_side/actors/: actor.gbsres  plant_1.gbsres  plant_2.gbsres  plant_3.gbsres  plant_4.gbsres  plant_5.gbsres
project/scenes/cliff_side/triggers/: tp_house.gbsres
project/scenes/dream/: scene.gbsres
project/scenes/final_dream/: scene.gbsres
project/scenes/house_exterior/: scene.gbsres
project/scenes/house_exterior/actors/: actor.gbsres  actor_2.gbsres  actor_3.gbsres  actor_4.gbsres  actor_5.gbsres  door_in.gbsres  flower_1.gbsres  plant_6.gbsres  plant_7.gbsres  plant_8.gbsres  shroom_1.gbsres
project/scenes/house_exterior/triggers/: trigger.gbsres  trigger_2.gbsres
project/scenes/house_interior/: scene.gbsres
project/scenes/house_interior/actors/: bed.gbsres  book1.gbsres  book2.gbsres  book3.gbsres  cauldron.gbsres  chest_1.gbsres  chest_2.gbsres  door_out.gbsres  flask_chest_1.gbsres  key_chest.gbsres
project/scenes/pause/: scene.gbsres
project/scenes/pause/actors/: actor.gbsres  actor_2.gbsres  actor_3.gbsres  actor_4.gbsres  actor_5.gbsres  actor_6.gbsres  actor_7.gbsres  actor_8.gbsres  actor_9.gbsres  plant_count.gbsres  plant_count_2.gbsres  plant_count_3.gbsres  plant_count_4.gbsres
project/scenes/river_side/: scene.gbsres
project/scenes/river_side/actors/: flask_chest_2.gbsres  flower_2.gbsres  flower_3.gbsres  flower_4.gbsres  flower_5.gbsres  flower_6.gbsres  plant_10.gbsres  plant_11.gbsres  plant_9.gbsres
project/scenes/river_side/triggers/: tp_cave.gbsres  tp_house.gbsres  water.gbsres
project/scenes/splash/: scene.gbsres
project/scenes/the_end/: scene.gbsres
project/scenes/title/: scene.gbsres
project/scripts/: collect_flower.gbsres  collect_mushroom.gbsres  collect_plant.gbsres  empty_chest.gbsres  flask_chest.gbsres  init_variables.gbsres  item_counter.gbsres  pause_menu.gbsres  water_enter.gbsres  water_leave.gbsres
project/sounds/: collectwav.gbsres  jumpwav.gbsres
project/sprites/: bed.gbsres  blank.gbsres  book.gbsres  cauldron.gbsres  chest.gbsres  door.gbsres  flask.gbsres  flower.gbsres  key.gbsres  knife.gbsres  leaves.gbsres  mushroom.gbsres  number.gbsres  player.gbsres  powerup_bottle.gbsres  shelves.gbsres  splash.gbsres
