cmake_minimum_required(VERSION 3.27)
project(alchemist_demake C)

set(CMAKE_C_STANDARD 11)

include_directories(assets/engine/include)
include_directories(assets/engine/include/data)
include_directories(assets/engine/include/states)

add_executable(alchemist_demake
        assets/engine/include/data/border.h
        assets/engine/include/data/spritesheet_none.h
        assets/engine/include/states/adventure.h
        assets/engine/include/states/logo.h
        assets/engine/include/states/platform.h
        assets/engine/include/states/pointnclick.h
        assets/engine/include/states/shmup.h
        assets/engine/include/states/topdown.h
        assets/engine/include/actor.h
        assets/engine/include/bankdata.h
        assets/engine/include/camera.h
        assets/engine/include/collision.h
        assets/engine/include/compat.h
        assets/engine/include/core.h
        assets/engine/include/data_manager.h
        assets/engine/include/events.h
        assets/engine/include/fade_manager.h
        assets/engine/include/flasher.h
        assets/engine/include/game_time.h
        assets/engine/include/gbprinter.h
        assets/engine/include/gbs_types.h
        assets/engine/include/gbt_player.h
        assets/engine/include/hUGEDriver.h
        assets/engine/include/hUGEDriverRoutines.h
        assets/engine/include/input.h
        assets/engine/include/interrupts.h
        assets/engine/include/linked_list.h
        assets/engine/include/load_save.h
        assets/engine/include/macro.h
        assets/engine/include/macro.i
        assets/engine/include/math.h
        assets/engine/include/music_manager.h
        assets/engine/include/palette.h
        assets/engine/include/parallax.h
        assets/engine/include/projectiles.h
        assets/engine/include/rtc.h
        assets/engine/include/scroll.h
        assets/engine/include/sfx_player.h
        assets/engine/include/sgb_border.h
        assets/engine/include/shadow.h
        assets/engine/include/sio.h
        assets/engine/include/states_caller.h
        assets/engine/include/system.h
        assets/engine/include/trigger.h
        assets/engine/include/ui.h
        assets/engine/include/vm.h
        assets/engine/include/vm.i
        assets/engine/include/vm_actor.h
        assets/engine/include/vm_camera.h
        assets/engine/include/vm_exceptions.h
        assets/engine/include/vm_gameboy.h
        assets/engine/include/vm_gbprinter.h
        assets/engine/include/vm_load_save.h
        assets/engine/include/vm_math.h
        assets/engine/include/vm_music.h
        assets/engine/include/vm_palette.h
        assets/engine/include/vm_projectiles.h
        assets/engine/include/vm_rtc.h
        assets/engine/include/vm_scene.h
        assets/engine/include/vm_sgb.h
        assets/engine/include/vm_sio.h
        assets/engine/include/vm_ui.h
        assets/engine/src/core/absolute.c
        assets/engine/src/core/actor.c
        assets/engine/src/core/bankdata.c
        assets/engine/src/core/camera.c
        assets/engine/src/core/core.c
        assets/engine/src/core/data_manager.c
        assets/engine/src/core/events.c
        assets/engine/src/core/fade_manager.c
        assets/engine/src/core/flasher.c
        assets/engine/src/core/game_time.c
        assets/engine/src/core/gbprinter.c
        assets/engine/src/core/input.c
        assets/engine/src/core/interrupts.c
        assets/engine/src/core/load_save.c
        assets/engine/src/core/math.c
        assets/engine/src/core/math_atan2.c
        assets/engine/src/core/music_manager.c
        assets/engine/src/core/palette.c
        assets/engine/src/core/parallax.c
        assets/engine/src/core/projectiles.c
        assets/engine/src/core/scroll.c
        assets/engine/src/core/sfx_player.c
        assets/engine/src/core/sgb_border.c
        assets/engine/src/core/sio.c
        assets/engine/src/core/system.c
        assets/engine/src/core/trigger.c
        assets/engine/src/core/ui.c
        assets/engine/src/core/vm.c
        assets/engine/src/core/vm_actor.c
        assets/engine/src/core/vm_camera.c
        assets/engine/src/core/vm_gameboy.c
        assets/engine/src/core/vm_gbprinter.c
        assets/engine/src/core/vm_instructions.c
        assets/engine/src/core/vm_load_save.c
        assets/engine/src/core/vm_math.c
        assets/engine/src/core/vm_music.c
        assets/engine/src/core/vm_palette.c
        assets/engine/src/core/vm_projectiles.c
        assets/engine/src/core/vm_rtc.c
        assets/engine/src/core/vm_scene.c
        assets/engine/src/core/vm_sgb.c
        assets/engine/src/core/vm_sio.c
        assets/engine/src/core/vm_ui.c
        assets/engine/src/data/spritesheet_none.c
        assets/engine/src/states/adventure.c
        assets/engine/src/states/logo.c
        assets/engine/src/states/platform.c
        assets/engine/src/states/pointnclick.c
        assets/engine/src/states/shmup.c
        assets/engine/src/states/topdown.c
        assets/engine/src/main.c)
